test_scores/negative_dimers/features/P13196.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P13196.pkl.xz